[metadata]
name = pwrn
version = 0.0.1
author = Cees van de Griend
author_email = cees@griend.eu
description = pwrn / prewarn - Nautical calculations
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/griend/pwrn.git
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)
    Operating System :: OS Independent

[options]
packages = find:
python_requires = >=3.6
